Изменения разметка главной страницы
Удалены комментарии, footer перемещен из main, aside заменен на div

--- a/index.html
+++ b/index.html
@@ -22,15 +22,15 @@
   	<main>
   		<h1>Аренда недвижимости в Седоне</h1>
 
-  		<aside>
+  		<div>
   			<img src="https://via.placeholder.com/1200x509" alt="Седона">
   			<img src="https://via.placeholder.com/456x350" alt="Добро пожаловать">  
-   		</aside> <!--С этим блоком много сомнений, не до конца уверена, что подходит aside, может лучше в div, или что-то еще. И на счет самой надписи, делать ее одной картинкой или лучше тремя. И размеры изображений не целые числа (456.65), валидатор считает это за ошибку, как стоит указывать размеры в таких случаях?-->
+   		</div> 
 	
   		<section>
   			<p>Седона - небольшой городок в Аризоне,<br> заслуживающий большего!</p>
   			<p>Рассмотрим пять причин, по которым Седона круче, чем Гранд Каньон!</p>
-  		</section> <!--Не уверена, что это смысловой блок section, не могу дать ему заголовок. Валидатор выдает предупредение по этому поводу.-->
+  		</section> 
 
   		<section>
   			<h2>Преимущество 1</h2>
@@ -123,13 +123,13 @@
       				<input id="children" type="text" name="quantity">
       			</p>
   				<button type="submit">Найти</button>
-  			</form> <!--Понимаю, что разметка формы неверная, но смогла только так. Не поняла, нужно ли вообще ее размечать на данном этапе, в чате несколько наставников писали, что не нужно. Но ведь она на макете видна по умолчанию.-->
+  			</form> 
   		</section>
 
   		<div>
   			<img src="https://via.placeholder.com/1199x594" alt="Карта">
   		</div>
-
+  	</main>
   		<footer>
   			<section>
   				<h2>Контакты</h2>
@@ -157,8 +157,5 @@
   				</a>
   			</p>
   		</footer>
-  	</main>
-  
-
   </body>
 </html>
