Разметка внутренней страницы с комментариями

--- a/catalog.html
+++ b/catalog.html
@@ -23,9 +23,9 @@
   		<h1>Поиск гостиницы</h1>
 
   		<section>
-  			<h2>Фильтр жилья</h2>
+  			<h2>Фильтр жилья</h2> <!--В этом блоке пока не разметила фоновую картинку, подумала, что она будет вставляться как background-image в css-->
 
-  			<form method="get" action="https://echo.htmlacademy.ru/">
+  			<form method="get" action="https://echo.htmlacademy.ru/"> 
       			<fieldset>
       				<legend>Инфраструктура:</legend>
       					<ul>
@@ -63,7 +63,7 @@
       			</fieldset>
 			
 	      		<fieldset>
-	      			<legend>Стоимость в сутки(р):</legend>
+	      			<legend>Стоимость в сутки(р):</legend>  <!--Это наверное совсем какие-то костыли у меня получились, а не форма.. Насколько я поняла, javascript мы не будем для нее писать-->
 	      			<p>
 	      				<input type="text" name="cost-min" value="От 0">
 	      				<input type="text" name="cost-max" value="До 3000">
@@ -93,7 +93,7 @@
   			<div>
   				<ul>
   					<li>
-  						<h3>AMARA RESORT&ampSPA</h3>
+  						<h3>AMARA RESORT&ampSPA</h3>  <!--В список гостиниц не добавила рейтинг со звездочками, подумала, что тоже позже через css-->
   						<img src="https://via.placeholder.com/135x90" alt="amara">
   						<p>
   							<span>Гостиница</span>
