ДЗ Графика всех страниц

--- a/catalog.html
+++ b/catalog.html
@@ -3,12 +3,16 @@
  	<head>
     	<meta charset="utf-8">
     	<title>HTML Academy: Седона</title>
+    	<link rel="icon" href="favicon.ico">
+    	<link rel="icon" href="img/favicon_152.svg" type="image/svg+xml">
+    	<link rel="apple-touch-icon" href="img/apple.png">
+    	<link rel="manifest" href="manifest.webmanifest">
  	</head>
 <body>
   	<header>
   		<nav>
   			<a href="index.html">
-  				<img src="https://via.placeholder.com/138x70" alt="Логотип Седона">
+  				<img src="img/logo.svg" width="138" height="70" alt="Логотип Седона">
   			</a>
   			<ul>
   				<li><a href="blank.html">Информация</a></li>
@@ -23,7 +27,8 @@
   		<h1>Поиск гостиницы</h1>
 
   		<section>
-  			<h2>Фильтр жилья</h2> <!--В этом блоке пока не разметила фоновую картинку, подумала, что она будет вставляться как background-image в css-->
+  			<h2>Фильтр жилья</h2> 
+  			<img src="img/background.jpg" width="1200" height="210" alt="Седона">
 
   			<form method="get" action="https://echo.htmlacademy.ru/"> 
       			<fieldset>
@@ -93,8 +98,8 @@
   			<div>
   				<ul>
   					<li>
-  						<h3>AMARA RESORT&ampSPA</h3>  <!--В список гостиниц не добавила рейтинг со звездочками, подумала, что тоже позже через css-->
-  						<img src="https://via.placeholder.com/135x90" alt="amara">
+  						<h3>AMARA RESORT&amp;SPA</h3>  <!--В список гостиниц не добавила рейтинг со звездочками, подумала, что тоже позже через css-->
+  						<img src="img/layer1.jpg" width="135" height="90" alt="amara">
   						<p>
   							<span>Гостиница</span>
   							<span>От 4000 р.</span>
@@ -106,7 +111,7 @@
   					</li>
   					<li>
   						<h3>DESERT QUAIL INN</h3>
-  						<img src="https://via.placeholder.com/135x90" alt="desert">
+  						<img src="img/layer2.jpg" width="135" height="90" alt="desert">
   						<p>
   							<span>Мотель</span>
   							<span>От 3000 р.</span>
@@ -118,7 +123,7 @@
   					</li>
   					<li>
   						<h3>VILLAS AT POCO DIABLO</h3>
-  						<img src="https://via.placeholder.com/135x90" alt="villas">
+  						<img src="img/layer3.jpg" width="135" height="90" alt="villas">
   						<p>
   							<span>Апартаменты</span>
   							<span>От 2000 р.</span>
@@ -155,7 +160,7 @@
   			<p>
   				WEBSITE BY
   				<a href="https://htmlacademy.ru/intensive/htmlcss">
-  					<img src="https://via.placeholder.com/115x41" alt="Логотип htmlacademy">
+  					<img src="img/logo-htmlacademy.svg" width="115" height="41" alt="Логотип htmlacademy">
   				</a>
   			</p>  		
   	</footer>
