--- a/index.html
+++ b/index.html
@@ -3,12 +3,16 @@
   <head>
     <meta charset="utf-8">
     <title>HTML Academy: Седона</title>
+    <link rel="icon" href="favicon.ico">
+    <link rel="icon" href="img/favicon_152.svg" type="image/svg+xml">
+    <link rel="apple-touch-icon" href="img/apple.png">
+    <link rel="manifest" href="manifest.webmanifest">
   </head>
   <body>
   	<header>
   		<nav>
   			<a>
-  				<img src="https://via.placeholder.com/138x70" alt="Логотип Седона">
+  				<img src="img/logo.svg" width="138" height="70" alt="Логотип Седона">
   			</a>
   			<ul>
   				<li><a href="blank.html">Информация</a></li>
@@ -23,8 +27,8 @@
   		<h1>Аренда недвижимости в Седоне</h1>
 
   		<div>
-  			<img src="https://via.placeholder.com/1200x509" alt="Седона">
-  			<img src="https://via.placeholder.com/456x350" alt="Добро пожаловать">  
+  			<img src="img/background_photo.jpg" width="1200" height="509" alt="Седона">
+  			<img src="img/welcome.png" width="456" height="350" alt="Добро пожаловать">  
    		</div> 
 	
   		<section>
@@ -44,7 +48,7 @@
   		</section>
 
   		<div>
-  			<img src="https://via.placeholder.com/800x256" alt="Город">
+  			<img src="img/image.jpg" width="800" height="256" alt="Город">
   		</div>
 
   		<section>
@@ -66,7 +70,7 @@
   		</section>
 
   		<div>
-  			<img src="https://via.placeholder.com/800x256" alt="Мост дьявола">
+  			<img src="img/image2.jpg" width="800" height="256" alt="Мост дьявола">
   		</div>
 
   		<section>
@@ -127,7 +131,7 @@
   		</section>
 
   		<div>
-  			<img src="https://via.placeholder.com/1199x594" alt="Карта">
+  			<img src="img/map.png" width="1199" height="594" alt="Карта">
   		</div>
   	</main>
   		<footer>
@@ -153,7 +157,7 @@
   			<p>
   				WEBSITE BY
   				<a href="https://htmlacademy.ru/intensive/htmlcss">
-  					<img src="https://via.placeholder.com/115x41" alt="Логотип htmlacademy">
+  					<img src="img/logo-htmlacademy.svg" width="115" height="41" alt="Логотип htmlacademy">
   				</a>
   			</p>
   		</footer>
