Доработка ДЗ Графика всех страниц

--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="utf-8">
     <title>HTML Academy: Седона</title>
     <link rel="icon" href="favicon.ico">
-    <link rel="icon" href="img/favicon_152.svg" type="image/svg+xml">
-    <link rel="apple-touch-icon" href="img/apple.png">
+    <link rel="icon" href="img/favicon-152.svg" type="image/svg+xml">
+    <link rel="apple-touch-icon" href="img/favicon-180.png">
     <link rel="manifest" href="manifest.webmanifest">
   </head>
   <body>
@@ -27,8 +27,8 @@
   		<h1>Аренда недвижимости в Седоне</h1>
 
   		<div>
-  			<img src="img/background_photo.jpg" width="1200" height="509" alt="Седона">
-  			<img src="img/welcome.png" width="456" height="350" alt="Добро пожаловать">  
+  			<img src="img/background-index.jpg" width="1200" height="509" alt="Седона">
+  			<img src="img/welcome.svg" width="456" height="350" alt="Добро пожаловать">  
    		</div> 
 	
   		<section>
@@ -48,7 +48,7 @@
   		</section>
 
   		<div>
-  			<img src="img/image.jpg" width="800" height="256" alt="Город">
+  			<img src="img/advantage-1.jpg" width="800" height="256" alt="Город">
   		</div>
 
   		<section>
@@ -70,7 +70,7 @@
   		</section>
 
   		<div>
-  			<img src="img/image2.jpg" width="800" height="256" alt="Мост дьявола">
+  			<img src="img/advantage-2.jpg" width="800" height="256" alt="Мост дьявола">
   		</div>
 
   		<section>
