--- a/blank.html
+++ b/blank.html
@@ -4,9 +4,9 @@
     	<meta charset="utf-8">
     	<title>HTML Academy: Седона</title>
     	<link rel="icon" href="favicon.ico">
-    	<link rel="icon" href="img/favicon_152.svg" type="image/svg+xml">
-    	<link rel="apple-touch-icon" href="img/apple.png">
-    	<link rel="manifest" href="manifest.webmanifest">
+      <link rel="icon" href="img/favicon-152.svg" type="image/svg+xml">
+      <link rel="apple-touch-icon" href="img/favicon-180.png">
+      <link rel="manifest" href="manifest.webmanifest">
  	</head>
 <body>
   	<header>
