--- a/catalog.html
+++ b/catalog.html
@@ -4,8 +4,8 @@
     	<meta charset="utf-8">
     	<title>HTML Academy: Седона</title>
     	<link rel="icon" href="favicon.ico">
-    	<link rel="icon" href="img/favicon_152.svg" type="image/svg+xml">
-    	<link rel="apple-touch-icon" href="img/apple.png">
+    	<link rel="icon" href="img/favicon-152.svg" type="image/svg+xml">
+    	<link rel="apple-touch-icon" href="img/favicon-180.png">
     	<link rel="manifest" href="manifest.webmanifest">
  	</head>
 <body>
@@ -28,7 +28,7 @@
 
   		<section>
   			<h2>Фильтр жилья</h2> 
-  			<img src="img/background.jpg" width="1200" height="210" alt="Седона">
+  			<img src="img/background-catalog.jpg" width="1200" height="210" alt="Седона">
 
   			<form method="get" action="https://echo.htmlacademy.ru/"> 
       			<fieldset>
@@ -99,7 +99,7 @@
   				<ul>
   					<li>
   						<h3>AMARA RESORT&amp;SPA</h3>  <!--В список гостиниц не добавила рейтинг со звездочками, подумала, что тоже позже через css-->
-  						<img src="img/layer1.jpg" width="135" height="90" alt="amara">
+  						<img src="img/hotel-amara.jpg" width="135" height="90" alt="amara">
   						<p>
   							<span>Гостиница</span>
   							<span>От 4000 р.</span>
@@ -111,7 +111,7 @@
   					</li>
   					<li>
   						<h3>DESERT QUAIL INN</h3>
-  						<img src="img/layer2.jpg" width="135" height="90" alt="desert">
+  						<img src="img/hotel-desert.jpg" width="135" height="90" alt="desert">
   						<p>
   							<span>Мотель</span>
   							<span>От 3000 р.</span>
@@ -123,7 +123,7 @@
   					</li>
   					<li>
   						<h3>VILLAS AT POCO DIABLO</h3>
-  						<img src="img/layer3.jpg" width="135" height="90" alt="villas">
+  						<img src="img/hotel-villas.jpg" width="135" height="90" alt="villas">
   						<p>
   							<span>Апартаменты</span>
   							<span>От 2000 р.</span>
