--- a/catalog.html
+++ b/catalog.html
@@ -98,7 +98,7 @@
   			<div>
   				<ul>
   					<li>
-  						<h3>AMARA RESORT&amp;SPA</h3>  <!--В список гостиниц не добавила рейтинг со звездочками, подумала, что тоже позже через css-->
+  						<h3>AMARA RESORT&amp;SPA</h3>  
   						<img src="img/hotel-amara.jpg" width="135" height="90" alt="amara">
   						<p>
   							<span>Гостиница</span>
