--- a/index.html
+++ b/index.html
@@ -1,165 +1,184 @@
 <!DOCTYPE html>
-<html lang="ru">
+<html class="page" lang="ru">
   <head>
     <meta charset="utf-8">
     <title>HTML Academy: Седона</title>
+    <link rel="stylesheet" href="css/normalize.css">
+    <link rel="stylesheet" href="css/style.css">
     <link rel="icon" href="favicon.ico">
     <link rel="icon" href="img/favicon-152.svg" type="image/svg+xml">
     <link rel="apple-touch-icon" href="img/favicon-180.png">
     <link rel="manifest" href="manifest.webmanifest">
+
   </head>
-  <body>
-  	<header>
-  		<nav>
-  			<a>
-  				<img src="img/logo.svg" width="138" height="70" alt="Логотип Седона">
-  			</a>
-  			<ul>
-  				<li><a href="blank.html">Информация</a></li>
-  				<li><a href="blank.html">Фото и видео</a></li>
-  				<li><a href="blank.html">Карта штата</a></li>
-  				<li><a href="catalog.html">Гостиницы</a></li>
-  			</ul>
+  <body class="page-body">
+  	<header class="main-header">
+  	
+      <nav class="main-nav">
+          <a class="main-logo">
+    				<img src="img/logo.svg" width="138" height="70" alt="Логотип Седона">
+    			</a>
+    			<ul class="site-nav">
+    				<li class="site-nav-link"><a href="blank.html">Информация</a></li>
+    				<li class="site-nav-link"><a href="blank.html">Фото и видео</a></li>
+    				<li class="site-nav-link"><a href="blank.html">Карта штата</a></li>
+    				<li class="site-nav-link"><a href="catalog.html">Гостиницы</a></li>
+    			</ul>
   		</nav>
    	</header>
 
-  	<main>
-  		<h1>Аренда недвижимости в Седоне</h1>
+  	<main class="container">
+  		<h1 hidden class="main-title title-hidden">Аренда недвижимости в Седоне</h1>
 
-  		<div>
+  		<div class="main-img">
   			<img src="img/background-index.jpg" width="1200" height="509" alt="Седона">
   			<img src="img/welcome.svg" width="456" height="350" alt="Добро пожаловать">  
    		</div> 
 	
-  		<section>
-  			<p>Седона - небольшой городок в Аризоне,<br> заслуживающий большего!</p>
-  			<p>Рассмотрим пять причин, по которым Седона круче, чем Гранд Каньон!</p>
+  		<section class="slogan">
+  			<p class="slogan-title">Седона - небольшой городок в Аризоне,<br> заслуживающий большего!</p>
+  			<p class="slogan-text">Рассмотрим пять причин, по которым Седона круче, чем Гранд Каньон!</p>
   		</section> 
 
-  		<section>
-  			<h2>Преимущество 1</h2>
-  			<ul>
-  				<li>
-  					<h3>Настоящий<br> городок</h3>
+  		<section class="advantage">
+  			<h2 hidden class="title-hidden">Преимущество 1</h2>
+  			<ul class="advantage-list">
+  				<li class="advantage-item">
+  					<h3 class="advantage-title">Настоящий<br> городок</h3>
   					<span>-№1-</span>
-  					<p>Седона - не аттракцион для туристов, там<br> течёт своя жизнь</p>
+  					<p class="advantage-text">Седона - не аттракцион для туристов, там<br> течёт своя жизнь</p>
   				</li>
   			</ul>
   		</section>
-
-  		<div>
+  		<div class="advantage-img">
   			<img src="img/advantage-1.jpg" width="800" height="256" alt="Город">
   		</div>
 
-  		<section>
-  			<h2>Особенности</h2>
-  			<ul>
-  				<li>
-  					<h3>Жильё</h3>
-  					<p>Рекомендуем пожить в настоящем<br> мотеле, всё как в кино!</p>
+  		<section class="features">
+  			<h2 hidden class="title-hidden">Особенности</h2>
+  			<ul class="features-list">
+  				<li class="features-item">
+  					<div class="wrapper">
+              <h3 class="features-title">Жильё</h3>
+  					 <p class="features-text">Рекомендуем пожить в настоящем<br> мотеле, всё как в кино!</p>
+            </div>
   				</li>
-  				<li>
-  					<h3>Еда</h3>
-  					<p>Всегда заказывайте фирменный бургер,<br> вы не разочаруетесь!</p>
+  				<li class="features-item">
+  					<div class="wrapper">
+              <h3 class="features-title">Еда</h3>
+    					<p class="features-text">Всегда заказывайте фирменный бургер,<br> вы не разочаруетесь!</p>
+            </div>
   				</li>
-  				<li>
-  					<h3>Сувениры</h3>
-  					<p>Не только китайского, но и местного<br> производства!</p>
+  				<li class="features-item">
+  					<div class="wrapper">
+              <h3 class="features-title">Сувениры</h3>
+    					<p class="features-text">Не только китайского, но и местного<br> производства!</p>
+            </div>
   				</li>
   			</ul>
   		</section>
 
-  		<div>
+  		<div class="advantage-img">
   			<img src="img/advantage-2.jpg" width="800" height="256" alt="Мост дьявола">
   		</div>
 
-  		<section>
-  			<h2>Преимущество 2</h2>
-  			<ul>
-  				<li>
-  					<h3>Там есть<br> мост дьявола</h3>
+  		<section class="advantage">
+  			<h2 hidden class="title-hidden">Преимущество 2</h2>
+  			<ul class="advantage-list">
+  				<li class="advantage-item">
+  					<h3 class="advantage-title">Там есть<br> мост дьявола</h3>
   					<span>-№2-</span>
-  					<p>Да, по нему можно пройти! Если конечно<br> вы осмелитесь</p>
+  					<p class="advantage-text">Да, по нему можно пройти! Если конечно<br> вы осмелитесь</p>
   				</li>
   			</ul>
   		</section>
 
-  		<section>
-  			<h2>Преимущества 3, 4, 5</h2>
-  			<ul>
-  				<li>
-  					<h3>Небольшая<br> площадь</h3>
-  					<span>-№3-</span>
-  					<p>Все достопримечательности<br> находятся очень близко</p>
+  		<section class="advantage-other">
+  			<h2 hidden class="title-hidden">Преимущества 3, 4, 5</h2>
+  			<ul class="advantage-list">
+  				<li class="advantage-item">
+  					<div class="wrapper">
+              <h3 class="advantage-other-title">Небольшая<br> площадь</h3>
+    					<span>-№3-</span>
+    					<p class="advantage-other-text">Все достопримечательности<br> находятся очень близко</p>
+            </div>
   				</li>
-  				<li>
-  					<h3>Красивая<br> дорога</h3>
-  					<span>-№4-</span>
-  					<p>Ехать в Седону из Лас-Вегаса совсем<br> не скучно!</p>
+  				<li class="advantage-item">
+  					<div class="wrapper">
+              <h3 class="advantage-other-title">Красивая<br> дорога</h3>
+    					<span>-№4-</span>
+    					<p class="advantage-other-text">Ехать в Седону из Лас-Вегаса совсем<br> не скучно!</p>
+            </div>
   				</li>
-  				<li>
-  					<h3>Мало<br> туристов</h3>
-  					<span>-№5-</span>
-  					<p>Большинство едет в Гранд Каньон<br> и толпится там</p>
+  				<li class="advantage-item">
+  					<div class="wrapper">
+              <h3 class="advantage-other-title">Мало<br> туристов</h3>
+    					<span>-№5-</span>
+    					<p class="advantage-other-text">Большинство едет в Гранд Каньон<br> и толпится там</p>
+            </div>
   				</li>
   			</ul>
   		</section>
 
-  		<section>
-  			<h2>Поиск гостиницы в Седоне</h2>
-  			<p>Заинтересовались?</p>
-  			<p>Укажите предполагаемые даты поездки, <br> и мы покажем вам лучшие предложения гостиниц в седоне</p>
-  			<button type="button">Поиск гостиницы в Седоне</button>
-  			<form action="https://echo.htmlacademy.ru/" method="post">
-  				<p>
-  					<label for="check-in">Дата заезда</label>
-      				<input id="check-in" type="date" name="check-in-date">
-      			</p>
+  		<section class="search">
+  			<h2 hidden class="title-hidden">Поиск гостиницы в Седоне</h2>
+  			<div class="wrapper">
+          <p class="search-lead">Заинтересовались?</p>
+    			<p class="search-info">Укажите предполагаемые даты поездки, <br> и мы покажем вам лучшие предложения гостиниц в седоне</p>
+    			<button class=" button button-modal" type="button"><span class="button-text">Поиск гостиницы в Седоне</span></button>
+    			<form class="search-form" action="https://echo.htmlacademy.ru/" method="post">
+    				<p class="search-item">
+    					<label class="search-date" for="check-in">Дата заезда</label>
+        			<input class="search-date-input" id="check-in" type="text" name="check-in-date" value="24 апреля 2017">
+        		</p>
 
-      			<p>
-      				<label for="departure">Дата выезда</label>
-      				<input id="departure" type="date" name="date-of-departure">
-      			</p>
-      			<p>
-      				<label for="adults">Взрослые:</label>
-      				<input id="adults" type="text" name="quantity">
-      				<label for="children">Дети:</label>
-      				<input id="children" type="text" name="quantity">
-      			</p>
-  				<button type="submit">Найти</button>
-  			</form> 
+        		<p class="search-item">
+        			<label class="search-date" for="departure">Дата выезда</label>
+        			<input class="search-date-input" id="departure" type="text" name="date-of-departure" value="4 июля 2017">
+        		</p>
+        		<p class="search-item">
+        			<label class="quantity" for="adults">Взрослые:</label>
+        			<input class="quantity-input" id="adults" type="text" name="quantity" value="2">
+        			<label class="quantity" for="children">Дети:</label>
+        			<input class="quantity-input" id="children" type="text" name="quantity" value="0">
+        		</p>
+    				<button class="button button-search" type="submit"><span class="button-text">Найти</span></button>
+    			</form> 
+      </div>
   		</section>
 
-  		<div>
+  		<div class="map">
   			<img src="img/map.png" width="1199" height="594" alt="Карта">
   		</div>
   	</main>
-  		<footer>
-  			<section>
-  				<h2>Контакты</h2>
-  				<p>#VISITSEDONA</p>
-  				<p>ТЕЛ: <a href="tel:+74956660166">+7 (495) 666-01-66</a></p>
+
+  		<footer class="main-footer">
+  			<section class="footer-contacts">
+  				<h2 hidden class="title-hidden">Контакты</h2>
+          	<p class="footer-text">#VISITSEDONA</p>
+    				<p class="footer-phone" >ТЕЛ: <a href="tel:+74956660166">+7(495) 666-01-66</a></p>
   			</section>
-  			<section>
-  				<h2>Соцсети</h2>
-  				<ul>
-			     	<li>
-			        	<a href="#">Twitter</a>
+  			<section class="footer-social">  <!--Мы ведь еще не подключаем и не стилизуем иконки SVG?-->
+  				<h2 hidden class="title-hidden">Соцсети</h2>
+  				<ul class="social-list">
+			     	<li class="social-item">
+			        	<a class="social-button" href="#">Twitter</a>
 			      	</li>
-			      	<li>
-			       		 <a href="#">Facebook</a>
+			      	<li class="social-item">
+			       		 <a  class="social-button" href="#">Facebook</a>
 			      	</li>
-			      	<li>
-			        	<a href="#">YouTube</a>
+			      	<li class="social-item">
+			        	<a  class="social-button" href="#">YouTube</a>
 			      	</li>
 			    </ul>
   			</section>
-  			<p>
+  			<p class="footer-copyright">
   				WEBSITE BY
-  				<a href="https://htmlacademy.ru/intensive/htmlcss">
-  					<img src="img/logo-htmlacademy.svg" width="115" height="41" alt="Логотип htmlacademy">
+  				<a class="button-copy" href="https://htmlacademy.ru/intensive/htmlcss">
+  					<img class="logo-copy" src="img/logo-htmlacademy.svg" width="115" height="41" alt="Логотип htmlacademy">
   				</a>
   			</p>
   		</footer>
+
   </body>
 </html>
