--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
    	</header>
 
   	<main class="container">
-  		<h1 hidden class="main-title title-hidden">Аренда недвижимости в Седоне</h1>
+  		<h1 hidden class="title-hidden">Аренда недвижимости в Седоне</h1>
 
   		<div class="main-img">
   			<img src="img/background-index.jpg" width="1200" height="509" alt="Седона">
@@ -179,6 +179,5 @@
   				</a>
   			</p>
   		</footer>
-
   </body>
 </html>
