ДЗ Сетка на флексах для внутренней страницы

--- a/catalog.html
+++ b/catalog.html
@@ -35,7 +35,7 @@
         
   			   <form class="filter" method="get" action="https://echo.htmlacademy.ru/">
 
-            <div class="grid-infr">
+            <div class="flex-infr">
       			 <fieldset>
       				<legend>Инфраструктура:</legend>
       					<ul>
@@ -55,7 +55,7 @@
       			</fieldset>
           </div>
 
-          <div class="grid-hause">
+          <div class="flex-hause">
       			<fieldset>
         			<legend>Тип жилья:</legend>
         				<ul>
@@ -75,7 +75,7 @@
       			</fieldset>
           </div>
 
-          <div class="grid-price">
+          <div class="flex-price">
 	      		<fieldset>
 	      		<legend>Стоимость в сутки(р):</legend>  
 	      			<div class="filter-cost">
