--- a/catalog.html
+++ b/catalog.html
@@ -38,7 +38,7 @@
             <div class="flex-infr">
       			 <fieldset>
       				<legend>Инфраструктура:</legend>
-      					<ul>
+      					<ul class="filter-list">
       						<li class="filter-option">
       							<input type="checkbox" name="pool" id="filter-pool" checked>
       							<label for="filter-pool">Бассейн</label>
@@ -52,13 +52,13 @@
       							<label for="filter-wifi">WI-FI</label>
       						</li>
       					</ul>
-      			</fieldset>
-          </div>
+      			 </fieldset>
+            </div>
 
-          <div class="flex-hause">
-      			<fieldset>
+            <div class="flex-hause">
+      			 <fieldset>
         			<legend>Тип жилья:</legend>
-        				<ul>
+        				<ul class="filter-list">
       						<li class="filter-option">
       							<input type="checkbox" name="hotel" id="filter-hotel" checked>
       							<label for="filter-hotel">Гостиница</label>
@@ -72,15 +72,17 @@
       							<label for="filter-apartments">Апартаменты</label>
       						</li>
       					</ul>
-      			</fieldset>
-          </div>
+      			 </fieldset>
+            </div>
 
-          <div class="flex-price">
-	      		<fieldset>
-	      		<legend>Стоимость в сутки(р):</legend>  
-	      			<div class="filter-cost">
-	      				<input type="text" name="cost-min" value="От 0">
-	      				<input type="text" name="cost-max" value="До 3000">
+            <div class="flex-price">
+	      		 <fieldset>
+	      		   <legend>Стоимость в сутки (р):</legend>  
+	      			  <div class="filter-cost">
+                  <label for="filter-cost-min">От</label>
+	      				 <input type="text" name="cost-min" id="filter-cost-min" value="0">
+                 <label for="filter-cost-max">До</label>
+	      				 <input type="text" name="cost-max" id="filter-cost-max" value="3000">
 	      			</div>
 	      			<div>
 	      				<input type="range" min="0" max="3000" step="1" name="cost"> 
@@ -90,7 +92,6 @@
 	      			</div>
 	      		</fieldset>
           </div>
-
     		</form>
   		</section>
     </div>
@@ -106,6 +107,8 @@
 	  				<li class="sort-item"><button type="button"><spun class="sort-text">По типу</spun></button></li>
 	  				<li class="sort-item"><button type="button"><spun class="sort-text">По рейтингу</spun></button></li>
   				</ul>
+          <span class="sort-dir"><a class="dir" href="#"><img src="img/decoration/icon-up-dir.png"></a>
+          <a class="dir" href="#"><img src="img/decoration/icon-down-dir.png"></a></span>
   			</div>
 
   			<div class="catalog-hotels">
@@ -127,6 +130,7 @@
   						</div>
             </div>
               <div class="rating">
+                <span class="raiting-star-four"></span>
                 <p class="rating-text">
                   Рейтинг: 8,5
                 </p>
@@ -149,6 +153,7 @@
     						</div>
               </div>
               <div class="rating">
+                <span class="raiting-star-three"></span>
                 <p class="rating-text">
                   Рейтинг: 8,9
                 </p>
@@ -172,6 +177,7 @@
     						</div>
               </div>
               <div class="rating">
+                <span class="raiting-star-two"></span>
                 <p class="rating-text">
                   Рейтинг: 9,2
                 </p>
