--- a/index.html
+++ b/index.html
@@ -9,7 +9,6 @@
     <link rel="icon" href="img/favicon-152.svg" type="image/svg+xml">
     <link rel="apple-touch-icon" href="img/favicon-180.png">
     <link rel="manifest" href="manifest.webmanifest">
-
   </head>
   <body class="page-body">
   	<header class="main-header">
@@ -42,7 +41,7 @@
   			<h2 class="visually-hidden">Преимущество 1</h2>
   			<div class="advantage-content">
   					<h3 class="advantage-title">Настоящий<br> городок</h3>
-  					<span>-№1-</span>
+  					<span>&mdash; №1 &mdash;</span>
   					<p class="advantage-text">Седона - не аттракцион для туристов, там<br> течёт своя жизнь</p>
   			</div>
         <div class="advantage-img">
@@ -76,7 +75,7 @@
       </div>
   			<div class="advantage-content">
   					<h3 class="advantage-title">Там есть<br> мост дьявола</h3>
-  					<span>-№2-</span>
+  					<span>&mdash; №2 &mdash;</span>
   					<p class="advantage-text">Да, по нему можно пройти! Если конечно<br> вы осмелитесь</p>
   			</div>
   		</section>
@@ -86,17 +85,17 @@
   			<ul class="advantage-list-other">
   				<li class="advantage-item-other">
               <h3>Небольшая<br> площадь</h3>
-    					<span>- №3 -</span>
+    					<span>&mdash; №3 &mdash;</span>
     					<p>Все достопримечательности<br> находятся очень близко</p>
   				</li>
   				<li class="advantage-item-other">
               <h3>Красивая<br> дорога</h3>
-    					<span>- №4 -</span>
+    					<span>&mdash; №4 &mdash;</span>
     					<p>Ехать в Седону из Лас-Вегаса совсем<br> не скучно!</p>
   				</li>
   				<li class="advantage-item-other">
               <h3>Мало<br> туристов</h3>
-    					<span>- №5 -</span>
+    					<span>&mdash; №5 &mdash;</span>
     					<p>Большинство едет в Гранд Каньон<br> и толпится там</p>
   				</li>
   			</ul>
