ДЗ Завершаем вёрстку главной страницы

--- a/index.html
+++ b/index.html
@@ -33,8 +33,8 @@
         </div>   		
 	
   		<section class="slogan">
-  			<p class="slogan-title">Седона - небольшой городок в Аризоне,<br> заслуживающий большего!</p>
-  			<p class="slogan-text">Рассмотрим пять причин, по которым Седона круче, чем Гранд Каньон!</p>
+  			<p class="slogan-title">Седона &mdash; небольшой городок в Аризоне,<br> заслуживающий большего!</p>
+  			<p class="slogan-text">Рассмотрим 5 причин, по которым Седона круче, чем Гранд Каньон!</p>
   		</section> 
 
   		<section class="advantage">  
@@ -172,7 +172,7 @@
 
         <section class="footer-contacts">
           <h2 class="visually-hidden">Контакты</h2>
-            <p class="footer-text">#VISITSEDONA</p>
+            <p class="footer-text">#VISITSEDONA </p>
             <p class="footer-phone" >ТЕЛ: <a href="tel:+74956660166">+7(495) 666-01-66</a></p>
         </section>
         
@@ -191,13 +191,13 @@
 </svg></a>
               </li>
               <li class="social-item">
-                
                   <a  class="social social-yout" href="#">
                     <svg width="20" height="16" viewBox="0 0 20 16" fill="none" xmlns="http://www.w3.org/2000/svg">
     <path fill-rule="evenodd" clip-rule="evenodd" d="M3 0H17C18.65 0 20 1.35 20 3V13C20 14.65 18.65 16 17 16H3C1.35 16 0 14.65 0 13V3C0 1.35 1.35 0 3 0ZM6.027 4.002V11.998L15.014 8L6.027 4.002Z" fill="white"/>
                     </svg>
                   </a>                
               </li>
+
           </ul>
 
   			</section>
