ДЗ Завершаем вёрстку внутренней страницы

--- a/catalog.html
+++ b/catalog.html
@@ -125,7 +125,7 @@
                 <img src="img/hotel-amara.jpg" width="135" height="90" alt="amara">
               </div>
               <div class="catalog-hotels-info">
-                <a href="#">AMARA RESORT&amp;SPA</a>
+                <a href="#">AMARA RESORT &amp; SPA</a>
   						<p>
   							<span>Гостиница</span>
   							<span>От 4000 р.</span>
@@ -136,7 +136,7 @@
   						</div>
             </div>
               <div class="rating">
-                <span class="raiting-star-four"></span>
+                <span class="rating-star-four"></span>
                 <p class="rating-text">
                   Рейтинг: 8,5
                 </p>
@@ -159,7 +159,7 @@
     						</div>
               </div>
               <div class="rating">
-                <span class="raiting-star-three"></span>
+                <span class="rating-star-three"></span>
                 <p class="rating-text">
                   Рейтинг: 8,9
                 </p>
@@ -183,7 +183,7 @@
     						</div>
               </div>
               <div class="rating">
-                <span class="raiting-star-two"></span>
+                <span class="rating-star-two"></span>
                 <p class="rating-text">
                   Рейтинг: 9,2
                 </p>
