ДЗ Оживляем декоративные элементы

--- a/catalog.html
+++ b/catalog.html
@@ -4,7 +4,7 @@
 		<meta charset="utf-8">
 		<title>HTML Academy: Седона</title>
 		<link rel="stylesheet" href="css/normalize.min.css">
-		<link rel="stylesheet" href="css/style.min.css">  
+		<link rel="stylesheet" href="css/style.css">  
 		<link rel="icon" href="favicon.ico">
 		<link rel="icon" href="img/favicon-152.svg" type="image/svg+xml">
 		<link rel="apple-touch-icon" href="img/favicon-180.png">
@@ -131,8 +131,8 @@
 								 <span>От 4000 р.</span>
 								</p>
 								<div class="catalog-hotels-button">
-								 <button class="catalog-hotels-button-more button-text" type="button">Подробнее</button>
-								 <button class="catalog-hotels-button-book button-text" type="button">Забронировать</button>
+								 <button class="catalog-hotels-button-more" type="button">Подробнее</button>
+								 <button class="catalog-hotels-button-book" type="button">Забронировать</button>
 								</div>
 							</div>
 							<div class="rating">
@@ -154,8 +154,8 @@
 									<span>От 3000 р.</span>
 								</p>
 								<div class="catalog-hotels-button">
-									<button class="catalog-hotels-button-more button-text" type="button">Подробнее</button>
-									<button class="catalog-hotels-button-book button-text" type="button">Забронировать</button>
+									<button class="catalog-hotels-button-more" type="button">Подробнее</button>
+									<button class="catalog-hotels-button-book" type="button">Забронировать</button>
 								</div>
 							</div>
 							<div class="rating">
@@ -177,8 +177,8 @@
 									<span>От 2000 р.</span>
 								</p>
 								<div class="catalog-hotels-button">
-									<button class="catalog-hotels-button-more button-text" type="button">Подробнее</button>
-									<button class="catalog-hotels-button-book button-text" type="button">Забронировать</button>
+									<button class="catalog-hotels-button-more" type="button">Подробнее</button>
+									<button class="catalog-hotels-button-book" type="button">Забронировать</button>
 								</div>
 							</div>
 							<div class="rating">
