--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <title>HTML Academy: Седона</title>
     <link rel="stylesheet" href="css/normalize.min.css">
-    <link rel="stylesheet" href="css/style.min.css">
+    <link rel="stylesheet" href="css/style.css">
     <link rel="icon" href="favicon.ico">
     <link rel="icon" href="img/favicon-152.svg" type="image/svg+xml">
     <link rel="apple-touch-icon" href="img/favicon-180.png">
@@ -106,11 +106,11 @@
         <div class="search-wrapper">
           <p class="search-lead">Заинтересовались?</p>
     			<p class="search-info">Укажите предполагаемые даты поездки, <br> и мы покажем вам лучшие предложения гостиниц в седоне</p>
+          <a class="button button-modal" href="blank.html">Поиск гостиницы в Седоне</a>
         </div>
 
-    		<div class="form-wrapper">
-          <button class="button button-modal button-text" type="button">Поиск гостиницы в Седоне</button>
-
+    		<div class="form-wrapper popap-clouse">
+          
           <div class="search-form-wrapper">
       			<form class="search-form" action="https://echo.htmlacademy.ru/" method="post" target="_blank">
       				<div class="search-item">
@@ -150,7 +150,7 @@
                 </div>
           			 <label class="quantity" for="children">Дети:</label>
           			 <div class="wrapper-plus-minus">
-                  <input class="quantity-input" id="children" type="text" name="quantity" value="0">
+                  <input class="quantity-input quantity-input-children" id="children" type="text" name="quantity" value="0">
                   <button class="minus child-minus" aria-label="Дети убавить">
                     <svg width="12" height="3" viewBox="0 0 12 3" fill="none" xmlns="http://www.w3.org/2000/svg">
                       <rect width="12" height="3" fill="#A9A9A9"/>
@@ -163,13 +163,14 @@
                 </button>
                 </div>
           		</div>
-      				<button class="button button-search button-text" type="submit">Найти</button>
+      				<button class="button button-search" type="submit">Найти</button>
       			</form> 
         </div>
       </div>
 
         <div class="map">
           <img src="img/map.png" width="1199" height="594" alt="Карта">
+          <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d52385.13565760287!2d-111.8301579895027!3d34.8544438155023!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x872da132f942b00d%3A0x5548c523fa6c8efd!2z0KHQtdC00L7QvdCwLCDQkNGA0LjQt9C-0L3QsCA4NjMzNiwg0KHQqNCQ!5e0!3m2!1sru!2sru!4v1616138880351!5m2!1sru!2sru" width="1199" height="594" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
         </div>
     	</section>
   	</main>
@@ -217,5 +218,6 @@
   				</a>
   			</section>
   		</footer>
+      <script src="js/script.js"></script>
   </body>
 </html>
